# attestable-mcp-server

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
docker/: gramine_base.config.yaml
